[project]
name = "FIT1008_Python_Implementations"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.2",
    "ruff>=0.14.9",
]

[tool.ruff]
line-length = 80
exclude = ["__pycache__", ".venv"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
indent-style = "space"

[tool.ruff.per-file-ignores]
"tests/*" = ["E712"]

